kubernetes/ingress/emby-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby-external
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8096
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emby-external
subsets:
- addresses:
  - ip: 10.1.30.10
  ports:
  - name: app
    port: 8096
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-public
spec:
  rules:
  - host: emby.us.gonnella.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby-external
            port:
              number: 80
