kubernetes/ingress/https-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-httpsbackend
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: cloud.jp.gonnella.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8nextcloud
              port:
                number: 443
